--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="images">
-            <img src=".he.jpg" alt="He" class="photo">
-            <img src=".she.jpg" alt="She" class="photo">
+            <img src="he.jpeg" alt="He" class="photo">
+            <img src="she.jpeg" alt="She" class="photo">
         </div>
         <p>Bir haftalık inziva mantıklı mı?</p>
         <div class="buttons">
