--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="yes">Evet</button>
             <button id="no">Hayır</button>
         </div>
-        <div id="heart" class="hidden"❤️</div>
+        <div id="heart" class="hidden">❤️</div>
     </div>
     <script src="script.js"></script>
 </body>
