--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="he.jpeg" alt="He" class="photo">
             <img src="she.jpeg" alt="She" class="photo">
         </div>
-        <p>Bir haftalık inziva mantıklı mı?</p>
+        <p>Bir haftalık inziva mantıksız mı?</p>
         <div class="buttons">
             <button id="yes">Evet</button>
             <button id="no">Hayır</button>
